--- a/form.html
+++ b/form.html
@@ -1,3 +1,6 @@
+<!-- Load your maps here -->
+<div id="map-canvas"></div>
+
 <!-- As always ... bootstrap form style :) -->
 <div class="form-group">
 	<label class="control-label col-xs-2" for="coord_from">From</label>
