--- a/form.html
+++ b/form.html
@@ -1,3 +1,7 @@
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="maps.js"></script>
+
+
 <!-- Load your maps here -->
 <div id="map-canvas"></div>
 
